syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateRouteTableAssociationRequest {
  RouteTableAssociationArgs resource = 1;
}

message ReadRouteTableAssociationRequest {
  string resource_id = 1;
}

message UpdateRouteTableAssociationRequest {
  string resource_id = 1;
  RouteTableAssociationArgs resource = 2;
}

message DeleteRouteTableAssociationRequest {
  string resource_id = 1;
}

message RouteTableAssociationArgs {
  common.ChildResourceCommonArgs common_parameters = 1;
  string subnet_id = 2;
  string route_table_id = 3;
}


message RouteTableAssociationAwsOutputs {
  map<string, string> route_table_association_id_by_availability_zone = 1;
}

message RouteTableAssociationResource {
  common.CommonChildResourceParameters common_parameters = 1;
  string subnet_id = 2;
  string route_table_id = 3;

  RouteTableAssociationAwsOutputs aws_outputs = 4;
}
